# WebAutomation

./: .gitignore  Cargo.toml  NOTES.md  README.md  web-automation.toml  web-crawler.toml  web-recorder.toml
.xml-ai/: latest.json
dev/: Cargo.toml
dev/src/: main.rs
google-types/: Cargo.toml
google-types/src/: lib.rs
google-types/src/map_search/: data.rs  deserialize.rs  mod.rs  parser.rs  process.rs
web-analysis/: Cargo.toml
web-analysis/src/: cli.rs  main.rs  process.rs
web-analysis/src/pass/: metadata.rs  mod.rs  simplify.rs
web-automation-manifest/: Cargo.toml
web-automation-manifest/src/: lib.rs  specification.rs
web-client-bot/: Cargo.toml
web-client-bot/snippets/: scrape_anchors.all.robust.js  scrape_anchors.js
web-client-bot/src/: data.rs  lib.rs  retry.rs  utils.rs  wait_framework.rs
web-crawler/: Cargo.toml
web-crawler-core/: Cargo.toml
web-crawler-core/src/: common.rs  crawler.rs  db.rs  engine.rs  lib.rs  path_utils.rs  settings.rs  utils.rs
web-crawler-core/src/metadata/: common.rs  mod.rs  project.rs  snapshot.rs
web-crawler/src/: cli.rs  main.rs
web-recorder/: Cargo.toml
web-recorder/src/: cli.rs  data.rs  main.rs  manifest.rs  path_utils.rs  system.rs
