[package]
name = "web-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
wax = "0.6.0"
colored = "3.0.0"
once_cell = "1.19"

[dependencies.super-html-ast]
path = "/Users/colbyn/Developer/Libraries/super-markup-formats/super-html-ast"
